route post post ok

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT ='3000'
 DB_USER = "root"
 DB_PASSWORD = "#&d5!LjKk$mMndL5"
+# DB_PASSWORD = "ijdLDmaivU2!9"
 DB_HOST = "localhost"
 EMAIL = "=J$G3wGf-bMcMCQ@KFdgQ#Rs%ntDc&gqUYZ!72+D_$Qq%*?P8ryaj&Ah7+2KDcA8ht8Vu9ARg7C2KqsKcp2C_xL4S%5A#9^*#$_*"
 TOKEN = "YCUT35=yMts-6d&QYy2E+JD2#4Z+T?PHw2W%=4LdnXQ5f!6bANKXt_^64p!?+=wDE9k$DWMV9+NV?LqEnYh$z@nEw8aGJ^6fFuJC"
