--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "joi-password": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
